[package]
name = "st7735-lcd"
description = "ST7735 TFT LCD driver with embedded-graphics support"
version = "0.6.1"
authors = ["Paul Sajna <sajattack@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sajattack/st7735-lcd-rs"
readme = "README.md"
documentation = "https://docs.rs/st7735-lcd"

[dependencies]
embedded-hal = "0.2"
nb = "0.1"
heapless = "0.5.1" #### `static` friendly data structures that don't require dynamic memory allocation
mynewt = { path = "../stm32bluepill-mynewt-sensor/rust/mynewt" } #### Import mynewt library

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.num-derive]
version = "0.2"
default-features = false

[dependencies.embedded-graphics]
optional = true
version = "0.5"

[dev-dependencies]
metro_m4 = "0.1"
panic-halt = "0.2"

[features]
default = ["graphics", "noblock_spi"] ####
graphics = ["embedded-graphics"]
noblock_spi = [] ####